--- a/client/main/vareditor/dropdown.css
+++ b/client/main/vareditor/dropdown.css
@@ -29,5 +29,4 @@
     display: flex;
     flex-direction: column;
     flex: 2;
-    max-height: 200px;
 }
